# dartmouth-food-events

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  sync.yml
docs/: free-food-dartmouth.ics  index.html
src/free_food_dartmouth/: __init__.py  __main__.py  cli.py  dedupe.py  formatting.py  google_calendar.py  http.py  ics.py  matcher.py  models.py  utils.py
src/free_food_dartmouth/sources/: __init__.py  dartmouth.py  dartmouth_groups.py  geisel.py
tests/: conftest.py  test_cli.py  test_dedupe.py  test_google_calendar.py  test_ics.py  test_matcher.py  test_sources.py
tests/fixtures/: dartmouth_detail.html  dartmouth_event.ics  dartmouth_groups_detail.html  dartmouth_groups_page_1.json  dartmouth_groups_page_2.json  dartmouth_groups_tea.html  dartmouth_search.json  geisel_detail.html  geisel_week.html
