[project]
name = "free-food-dartmouth"
version = "0.1.0"
description = "Build and sync a three-week calendar of likely free-food events at Dartmouth."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ian Liu" }]
dependencies = [
  "beautifulsoup4>=4.13.4",
  "google-api-python-client>=2.174.0",
  "google-auth>=2.40.3",
  "icalendar>=6.3.1",
  "python-dateutil>=2.9.0.post0",
  "rapidfuzz>=3.13.0",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "responses>=0.25.7",
  "ruff>=0.12.1",
  "types-python-dateutil>=2.9.0.20250516",
  "types-requests>=2.32.4.20250611",
]

[project.scripts]
free-food-dartmouth = "free_food_dartmouth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/free_food_dartmouth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["free_food_dartmouth"]

[tool.pytest.ini_options]
addopts = "-q --cov=free_food_dartmouth --cov-report=term-missing"
testpaths = ["tests"]
